Clean up implementation of `TextDocumentSyncFeature`